--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -16,11 +16,11 @@
 
             <h1 class="display-5">Sign Up</h1>
             <form action="#" th:action="@{/signup}" method="POST">
-                <div class="alert alert-dark" th:if="${param.login}">
+                <div class="alert alert-dark" th:if="${signupSuccess}">
                     You successfully signed up! Please continue to the <a th:href="@{/login}">login</a> page.
                 </div>
-                <div th:if="${param.error}" class="alert alert-danger">
-                    <span>Example Signup Error Message</span>
+                <div th:if="${signupError}" class="alert alert-danger">
+                    <span th:text="${signupError}">Example Signup Error Message</span>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
