--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -152,7 +152,7 @@
                                 <tr th:each="credential: ${credentials}">
                                     <td>
                                         <button type="button" class="btn btn-success"
-                                                th:onclick="javascript:showCredentialModal([[${credential}]])">Edit</button>
+                                                th:onclick="javascript:showCredentialModal([[${credential}]], [[${encryptionService.decryptValue(credential.password, credential.key)}]])">Edit</button>
                                         <form action="#" th:action="@{'home/delete/credential/{id}'(id=${credential.credentialId})}" th:method="POST">
                                             <!--                                                <a class="btn btn-danger">Delete</a>-->
                                             <input type="hidden" name="_method" value="delete" />
@@ -161,7 +161,9 @@
                                     </td>
                                     <th scope="row" th:text="${credential.url}">Example Credential URL</th>
                                     <td th:text="${credential.username}">Example Credential Username</td>
-                                    <td th:text="${credential.password}">Example Credential Password</td>
+                                    <td th:text="${credential.password}"></td>
+<!--                                    <td th:text="${encryptionService.decryptValue(credential.password, credential.key)}">Example Credential Password</td>-->
+<!--                                    <td th:text="${credential.key}"></td>-->
                                 </tr>
                                 </tbody>
                             </table>
@@ -221,11 +223,11 @@
             }
 
             // For opening the credentials modal
-            function showCredentialModal(credential) {
+            function showCredentialModal(credential, unencryptedPassword) {
                 $('#credential-id').val(credential && credential.credentialId ? credential.credentialId : 0);
                 $('#credential-url').val(credential && credential.url ? credential.url : '');
                 $('#credential-username').val(credential && credential.username ? credential.username : '');
-                $('#credential-password').val(credential && credential.password ? credential.password : '');
+                $('#credential-password').val(credential && credential.password ? unencryptedPassword : '');
                 $('#credentialModal').modal('show');
             }
         </script>
