--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -25,14 +25,13 @@
                 </nav>
                 <div class="tab-content" id="nav-tabContent">
                     <div class="tab-pane fade show active" id="nav-files" role="tabpanel" aria-labelledby="nav-files-tab">
-                        <form action="#" th:action="@{/home}" th:object="${file}" enctype="multipart/form-data" method="POST">
+                        <form action="#" th:action="@{/home/file/new}" th:object="${file}" enctype="multipart/form-data" method="POST">
                             <div class="container">
                                 <div class="row" style="margin: 1em;">
                                     <div class="col-sm-2">
                                         <label for="fileUpload">Upload a New File:</label>
                                     </div>
                                     <div class="col-sm-6">
-<!--                                       Needs th:field="*{}" ??-->
                                         <input type="file"  class="form-control-file" id="fileUpload" name="fileUpload">
                                     </div>
                                     <div class="col-sm-4">
@@ -50,12 +49,17 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                <tr>
+                                <tr th:each="file : ${files}">
                                     <td>
                                         <a target="_blank" class="btn btn-success">View</a>
-                                        <a  class="btn btn-danger">Delete</a>
+                                        <form action="#" th:action="@{'home/delete/{id}'(id=${file.fileId})}" th:method="POST">
+                                            <!--                                                <a class="btn btn-danger">Delete</a>-->
+                                            <input type="hidden" name="_method" value="delete" />
+                                            <button type="submit" id="fileSubmitButton" class="btn btn-danger">Delete</button>
+                                        </form>
+
                                     </td>
-                                    <th scope="row">ExampleFile.txt</th>
+                                    <th scope="row" th:text="file.filename">ExampleFile.txt</th>
                                 </tr>
                                 </tbody>
                             </table>
@@ -87,8 +91,6 @@
                                             </form>
 
                                         </td>
-<!--                                        <th scope="row">Example Note Title</th>-->
-<!--                                        <td>Example Note Description </td>-->
                                         <td th:text="${note.noteTitle}"></td>
                                         <td th:text="${note.noteDescription}"></td>
                                     </tr>
@@ -111,14 +113,10 @@
                                             <div class="form-group">
                                                 <label for="note-title" class="col-form-label">Title</label>
                                                 <input type="text" name= "noteTitle" class="form-control" id="note-title" maxlength="20" required>
-<!--                                                       th:field="*{noteTitle}"-->
-<!--                                                >-->
                                             </div>
                                             <div class="form-group">
                                                 <label for="note-description" class="col-form-label">Description</label>
                                                 <textarea class="form-control" name="noteDescription" id="note-description" rows="5" maxlength="1000" required>
-<!--                                                          th:field="*{noteDescription}">-->
-
                                                 </textarea>
                                             </div>
                                             <button id="noteSubmit" type="submit" class="d-none"></button>
