--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -51,15 +51,17 @@
                                 <tbody>
                                 <tr th:each="file : ${files}">
                                     <td>
-                                        <a target="_blank" class="btn btn-success">View</a>
-                                        <form action="#" th:action="@{'home/delete/{id}'(id=${file.fileId})}" th:method="POST">
-                                            <!--                                                <a class="btn btn-danger">Delete</a>-->
+<!--                                        <form action="#" th:action="@{'home/download/{id}'(id=${file.fileId})}" th:method="POST">-->
+<!--                                            <input type="hidden" name="_method" value="download" />-->
+<!--                                            <button type="submit" id="fileDownloadButton" class="btn btn-success">View</button>-->
+<!--                                        </form>-->
+                                        <a target="_blank" class="btn btn-success" th:href="@{home/download(id=${file.fileId})}">View</a>
+                                        <form action="#" th:action="@{'home/file/{id}/delete'(id=${file.fileId})}" th:method="POST">
                                             <input type="hidden" name="_method" value="delete" />
                                             <button type="submit" id="fileSubmitButton" class="btn btn-danger">Delete</button>
                                         </form>
-
                                     </td>
-                                    <th scope="row" th:text="file.filename">ExampleFile.txt</th>
+                                    <th scope="row" th:text="${file.filename}">ExampleFile.txt</th>
                                 </tr>
                                 </tbody>
                             </table>
@@ -84,7 +86,7 @@
                                         <td>
                                             <button type="button" class="btn btn-success"
                                                     th:onclick="javascript:showNoteModal([[${note}]])">Edit</button>
-                                            <form action="#" th:action="@{'home/delete/{id}'(id=${note.noteId})}" th:method="POST">
+                                            <form action="#" th:action="@{'home/note/{id}/delete'(id=${note.noteId})}" th:method="POST">
 <!--                                                <a class="btn btn-danger">Delete</a>-->
                                                 <input type="hidden" name="_method" value="delete" />
                                                 <button type="submit" id="submitButton" class="btn btn-danger">Delete</button>
@@ -151,7 +153,7 @@
                                     <td>
                                         <button type="button" class="btn btn-success"
                                                 th:onclick="javascript:showCredentialModal([[${credential}]], [[${encryptionService.decryptValue(credential.password, credential.key)}]])">Edit</button>
-                                        <form action="#" th:action="@{'home/delete/credential/{id}'(id=${credential.credentialId})}" th:method="POST">
+                                        <form action="#" th:action="@{'home/credential/{id}/delete'(id=${credential.credentialId})}" th:method="POST">
                                             <!--                                                <a class="btn btn-danger">Delete</a>-->
                                             <input type="hidden" name="_method" value="delete" />
                                             <button type="submit" id="credSubmitButton" class="btn btn-danger">Delete</button>
