--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,13 +11,17 @@
     <body class="p-3 mb-2 bg-light text-black">
         <div class="container justify-content-center w-25 p-3" style="background-color: #eeeeee; margin-top: 5em;">
             <h1 class="display-5">Login</h1>
+            <div class="alert alert-dark" th:if="${param.logout}">
+                You have been logged out
+            </div>
             <form action="#" th:action="@{/login}" method="POST">
+<!--                <div class="alert alert-dark" th:if="${signupSuccess}">-->
+<!--                    You successfully signed up! Please login.-->
+<!--                </div>-->
                 <div class="alert alert-danger" th:if="${param.error}">
                     Invalid username or password
                 </div>
-                <div class="alert alert-dark" th:if="${param.logout}">
-                    You have been logged out
-                </div>
+
                 <div class="form-group">
                     <label for="inputUsername">Username</label>
                     <input type="input" class="form-control" name="username" id="inputUsername" placeholder="Enter Username" maxlength="20" required>
