--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -9,11 +9,10 @@
         <title>Result</title>
     </head>
     <body class="p-3 mb-2 bg-light text-black">
-<!--    <div>RESULTS</div>-->
         <div class="container justify-content-center w-50 p-3" style="margin-top: 5em;">
-            <div class="alert alert-success fill-parent">
+            <div class="alert alert-success fill-parent" th:if="${param.error == null}">
                 <h1 class="display-5">Success</h1>
-                <span>Your changes were successfully saved. Click <a th:href="@{/home}">here</a> to continue.</span>
+                <span >Your changes were successfully saved. Click <a th:href="@{/home}">here</a> to continue.</span>
             </div>
             <div class="alert alert-danger fill-parent" th:if="${param.error}">
                 <h1 class="display-5">Error</h1>
