--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -80,17 +80,16 @@
                                 <tbody>
                                     <tr th:each="note: ${notes}">
                                         <td>
-                                            <button type="button" class="btn btn-success"
+                                            <button type="button" class="btn btn-success" id="edit-note" th:value="note.noteId"
                                                     th:onclick="javascript:showNoteModal([[${note}]])">Edit</button>
                                             <form action="#" th:action="@{'home/note/{id}/delete'(id=${note.noteId})}" th:method="POST">
-<!--                                                <a class="btn btn-danger">Delete</a>-->
                                                 <input type="hidden" name="_method" value="delete" />
-                                                <button type="submit" id="submitButton" class="btn btn-danger">Delete</button>
+                                                <button type="submit" id="delete-note" th:value="${note.noteId}" class="btn btn-danger">Delete</button>
                                             </form>
 
                                         </td>
-                                        <td th:text="${note.noteTitle}"></td>
-                                        <td th:text="${note.noteDescription}"></td>
+                                        <td th:text="${note.noteTitle}" th:id="${note.noteTitle}"></td>
+                                        <td th:text="${note.noteDescription}" th:id="${note.noteDescription}"></td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -129,7 +128,7 @@
                         </div>
                     </div>
                     <div class="tab-pane fade" id="nav-credentials" role="tabpanel" aria-labelledby="nav-credentials-tab">
-                        <button style="margin: 0.25em;" type="button" class="btn btn-info float-right"
+                        <button style="margin: 0.25em;" type="button" class="btn btn-info float-right" id="create-credential"
                                 onclick="showCredentialModal()">
                             + Add a New Credential
                         </button>
@@ -145,21 +144,18 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                <tr th:each="credential: ${credentials}">
+                                <tr th:each="credential: ${credentials}" th:id="${credential.credentialId}">
                                     <td>
-                                        <button type="button" class="btn btn-success"
+                                        <button type="button" class="btn btn-success" id="edit-credential" th:value="${credential.credentialId}"
                                                 th:onclick="javascript:showCredentialModal([[${credential}]], [[${encryptionService.decryptValue(credential.password, credential.key)}]])">Edit</button>
                                         <form action="#" th:action="@{'home/credential/{id}/delete'(id=${credential.credentialId})}" th:method="POST">
-                                            <!--                                                <a class="btn btn-danger">Delete</a>-->
                                             <input type="hidden" name="_method" value="delete" />
-                                            <button type="submit" id="credSubmitButton" class="btn btn-danger">Delete</button>
+                                            <button type="submit" id="delete-credential" th:value="${credential.credentialId}" class="btn btn-danger">Delete</button>
                                         </form>
                                     </td>
-                                    <th scope="row" th:text="${credential.url}">Example Credential URL</th>
-                                    <td th:text="${credential.username}">Example Credential Username</td>
-                                    <td th:text="${credential.password}"></td>
-<!--                                    <td th:text="${encryptionService.decryptValue(credential.password, credential.key)}">Example Credential Password</td>-->
-<!--                                    <td th:text="${credential.key}"></td>-->
+                                    <th scope="row" th:text="${credential.url}" th:id="${credential.url}">Example Credential URL</th>
+                                    <td th:text="${credential.username}" th:id="${credential.username}">Example Credential Username</td>
+                                    <td th:text="${credential.password}" th:id="${credential.password}"></td>
                                 </tr>
                                 </tbody>
                             </table>
@@ -194,7 +190,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                        <button type="button" class="btn btn-primary" onclick="$('#credentialSubmit').click();">Save changes</button>
+                                        <button type="button" id="save-credential" class="btn btn-primary" onclick="$('#credentialSubmit').click();">Save changes</button>
                                     </div>
                                 </div>
                             </div>
